fixed alignment for vcs radio

--- a/site/public/css/configuration.css
+++ b/site/public/css/configuration.css
@@ -52,6 +52,12 @@
     flex: none !important;
 }
 
+#vcs-options label {
+    display: flex;
+    align-items: center;
+    margin: 0;
+}
+
 @media (min-width: 541px) {
     #forum-enabled-message,
     #room-seating-gradeable-id {
